# face-duplicate-detection

./: .gitignore  LICENSE  README.md  create_test_faces.py  debug_video_frames.py  demo.ipynb  detect_duplicates.py  duplicate_face.py  example_image_processing.py  face_recognition_custom.py  main.py  pyproject.toml  requirements.txt  run_program.sh  setup.sh  test_installation.py
data/: README.md
src/: __init__.py  detector.py  face_clusterer.py  face_detector.py  image_processor.py  models.py  video_processor.py
src/core/: __init__.py  duplicate_finder.py  face_detector.py  video_processor.py
src/utils/: config.py  image_utils.py  logging.py  visualizer.py
tests/: __init__.py  test_detector.py  test_face_clusterer.py  test_face_detector.py  test_image_processor.py  test_video_processor.py
